tests/machine/x/cpp/len_string.mochi.error
line 5: ../../../tests/machine/x/cpp/len_string.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/len_string.mochi.cpp:5:26: error: request for member ‘size’ in ‘"mochi"’, which is of non-class type ‘const char [6]’
    5 |         (cout << "mochi".size());
      |                          ^~~~

  4 | int main() {
  5 | 	(cout << "mochi".size());
  6 | 	return 0;
