tests/machine/x/cpp/len_string.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	(cout << "mochi".size());
	return 0;
}
